Fix cropping of logotype utility

--- a/styles/global/utilities.css
+++ b/styles/global/utilities.css
@@ -119,6 +119,7 @@
   display: grid;
   font-family: "Bomber Escort Outline", cursive;
   font-style: italic;
+  padding-inline-end: 2rem;
   place-content: center;
   text-align: center;
   text-fill-color: transparent;
